update work experience

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                                                                            aria-hidden="true"></i> Hire
                 Me</a>
             <a class="btn" target="_blank"
-               href="https://drive.google.com/file/d/1jY2JQwcWNXbFP7E7-IbJ4GL5cML2Ej4z/view?usp=sharing"><i
+               href="https://drive.google.com/file/d/1UukAFHuEMwn8CSw5WSWc6A2vxzSNq4RL/view?usp=sharing"><i
                     class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
         </div><!--//actions-->
         <ul class="social list-inline">
@@ -111,6 +111,42 @@
         <div class="timeline">
 
             <!--Kayak-->
+
+
+
+
+
+            <div class="item">
+                <div class="work-place">
+                    <h3 class="place">Optible.ai
+                        <small>(Data Scientist)</small>
+                    </h3>
+                    <div class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>Adelaide, Australia</div>
+                </div>
+                <div class="job-meta">
+                    <div class="title">Data Scientist</div>
+                    <div class="time">02/2021 - Present</div>
+                </div><!--//job-meta-->
+                <div class="job-desc">
+                    <p><b>Technologies:</b><br/>
+                        Python, NLP, Deep learning, Machine
+                        learning, torchtext, azure, aws
+                        </p>
+                    <p>
+                        <b>Responsibilities:</b><br/>
+                        Automatically read and rank forms and applications against organizations eligibility and merit criteria.</br>
+                        Transform any text into meaningful insights within minutes</br>
+                        Automate screening or and sales follow-ups </br>
+                        Build AI model to match applicants to the criteria that matters most to organization </br>
+
+                    </p>
+                </div><!--//job-desc-->
+            </div><!--//Kayak-->
+
+
+
+
+
             <div class="item">
                 <div class="work-place">
                     <h3 class="place">lftechnology.com
@@ -120,7 +156,7 @@
                 </div>
                 <div class="job-meta">
                     <div class="title">Data Scientist</div>
-                    <div class="time">01/2019 - Present</div>
+                    <div class="time">01/2019 - 09/2021</div>
                 </div><!--//job-meta-->
                 <div class="job-desc">
                     <p><b>Technologies:</b><br/>
@@ -277,6 +313,15 @@ IEEE LINK HERE
                         Date of Publication: AITB 2019 conference held on 5th November 2019
                     </div>
                 </div><br>
+
+                <div class="item-inner">
+                    <div class="title">Master of Computer Science specialization on AI and big data</div>
+                    <div class="sub-title">
+                        University of Wollogong, Australia
+                    </div>
+                    <div class="time">02/2022 - 01/2024</div>
+                    
+                </div>
 
                 <div class="item-inner">
                     <div class="title">Bachelor in Computer Engineering</div>
@@ -567,7 +612,7 @@ IEEE LINK HERE
                     <li><i class="fa fa-check" aria-hidden="true"></i> NLP & Recommendation System applications</li>
                 </ul>
                 <p>Drop me a line at <a href="mailto:sushil79g@gmail.com">sushil79g@gmail.com</a> or call me at <a
-                        href="tel:979805437038">97 9805 437038</a></p>
+                        href="tel:61432169155">+61 04321 69 155</a></p>
                 <ul class="social list-inline">
                     <li class="list-inline-item"><a href="https://linkedin.com/in/sushil-ghimire-92092011b/"><i class="fa fa-linkedin"
                                                                                                   aria-hidden="true"></i></a>
