--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <div class="chart-theme-1 chart" data-percent="98"><span>100</span>%</div>
                         </div>
                         <h4 class="skill-name">Data Science/ Machine Learning Engineering</h4>
-                        <div class="level">Expert, 2 years</div>
+                        <div class="level">Expert, 5 years +</div>
                         <div class="desc">
 
                         </div>
@@ -247,7 +247,7 @@
                             <div class="chart-theme-1 chart" data-percent="90"><span>90</span>%</div>
                         </div>
                         <h4 class="skill-name">Data Analysis/ Data Engineering</h4>
-                        <div class="level">Senior, 2 years</div>
+                        <div class="level">Expert, 4 years+</div>
                         <div class="desc">
                         </div>
                     </div><!--//item-inner-->
@@ -258,7 +258,7 @@
                             <div class="chart-theme-1 chart" data-percent="75"><span>80</span>%</div>
                         </div>
                         <h4 class="skill-name">Web Developer</h4>
-                        <div class="level">Intermediate, 1 years</div>
+                        <div class="level">Advance, 3 years+</div>
                         <div class="desc">
 
                         </div>
