--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ IEEE LINK HERE
                 <div class="card-body">
                   <h5 class="card-title">Nepali Image Captioning Using Machine Learning</h5>
                   <p class="card-text">Image Captioning, automatically generates descriptions according to the objects observed in an image.</p>
-                  <a href="https://www.lftechnology.com/blog/ai/nepali-image-captioning-machine-learning/" class="btn btn-primary"  target="_blank">Read More</a>
+                  <a href="https://web.archive.org/web/20220713024909/https://www.lftechnology.com/blog/ai/nepali-image-captioning-machine-learning/" class="btn btn-primary"  target="_blank">Read More</a>
                 </div>
               </div>
             </div>
@@ -565,7 +565,7 @@ IEEE LINK HERE
                 <div class="card-body">
                   <h5 class="card-title">Federated Learning for Data privacy</h5>
                   <p class="card-text">Maintaining the privacy of data for the users has become crucial. With the rise of machine learning, the concerns regarding data misuse are taken seriously.</p>
-                  <a href="https://www.lftechnology.com/blog/ai/federated-learning-data-privacy/" class="btn btn-primary" target="_blank">Read More</a>
+                  <a href="https://web.archive.org/web/20210122183735/https://www.lftechnology.com/blog/ai/federated-learning-data-privacy/" class="btn btn-primary" target="_blank">Read More</a>
                 </div>
               </div>
             </div>
@@ -589,7 +589,7 @@ IEEE LINK HERE
               <div class="card-body">
                 <h5 class="card-title">Machine learning project pipeline</h5>
                 <p class="card-text">Standardization of End-to-End Data Pipeline for AI Project Using Kedro consisting of both data engineering and data science pipelines.</p>
-                <a href="https://www.lftechnology.com/blog/ai-pipeline-kedro/" class="btn btn-primary" target="_blank">Read More</a>
+                <a href="https://web.archive.org/web/20201228230438/https://www.lftechnology.com/blog/ai-pipeline-kedro/" class="btn btn-primary" target="_blank">Read More</a>
               </div>
             </div>
           </div>
