update index file

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
             <div class="item">
                 <div class="work-place">
                     <h3 class="place"><a href="https://optible.ai/">Optible.ai</a>
-                        <small>(Machine Learning Engineer)</small>
+                        <small>
+                            Senior Data Scientist</small>
                     </h3>
                     <div class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>Adelaide, Australia</div>
                 </div>
@@ -134,13 +135,12 @@
                         </p>
                     <p>
                         <b>Responsibilities:</b><br/>
-                        • Developed and fine-tuned machine learning models using cutting-edge technology, implementing scalable training pipelines on Google Cloud's Vertex AI
-                    </br>• Automated grant application assessments, achieving 92% accuracy and reducing processing time by 80%
-                </br>• Implemented Large Language Models (LLMs) including ChatGPT, Gemini, and Palm, integrating them with Retrieval-Augmented Generation (RAG) techniques to enhance application assessment automation.
-            </br>   • Designed and optimised end-to-end data pipelines using Apache Airflow and Composer for large-scale data processing and ML workflows.
+                        • Automated grant assessment processes (OCR and NLP) using fine-tuned Deep Learning based models with LLM, achieving 92% accuracy and reducing processing time by 80%.
+                    </br>• Led junior data scientists in fine-tuning and deploying AI applications, boosting team efficiency and project delivery.
+                </br>•  Integrated fine-tuned Large Language Models (LLMs), including ChatGPT, Gemini, and Palm, integrating with Retrieval-Augmented Generation (RAG) techniques to automate client onboarding process to simplify and onboard new clients quickly, reduced onboarding time from 3 days to within 1 hour for 85% of new client workload.
+            </br>   • Leveraged MLflow for experiment tracking, model versioning, and deployment, improving model lifecycle management.
         </br>       • Utilised BigQuery for efficient data storage and analysis, supporting data-driven decision-making processes.
     </br>           • Collaborated with banks and the South Australian government to improve grant evaluation processes through advanced AI-driven solutions.
-</br>               • Led junior data scientists in fine-tuning and deploying AI applications, boosting team efficiency and project delivery.
 </br>                   • Engineered robust backend APIs to support data processing and model deployment at scale.
 </br>                   • Leveraged MLflow for experiment tracking, model versioning, and deployment, improving model lifecycle management.
 </br>                   • Performed exploratory data analysis and created visualisations to derive analysis.
